# PokeSDL

./: CMakeLists.txt  README.md
include/: Achievement.hpp  Ball.hpp  Button.hpp  Console.hpp  Game.hpp  GameObject.hpp  Player.hpp  Pokemon.hpp  PokemonStorage.hpp  Textbox.hpp  TextureManager.hpp
lib/SDL2Image/include/SDL2/: SDL_image.h
lib/SDL2TTF/include/SDL2/: SDL_ttf.h
src/: Achievement.cpp  Ball.cpp  Button.cpp  Console.cpp  Game.cpp  GameObject.cpp  Player.cpp  Pokemon.cpp  PokemonStorage.cpp  Textbox.cpp  TextureManager.cpp  main.cpp
